Reimplemented the SquareAverageFilter using long primitives. Commented out other ways of calculating new pixel values.