@@ -74,6 +74,13 @@ public class SquareAverageFilter extends ImageFilter {
 
 		}
 
+		// The following three ways of calculating new pixel values are commented out and kept
+		// here for posterity's sake and for possible experimentation with later.
+		// The uncommented way using long primitives should be the normal implementation.
+
+		// A very flawed method of calculating each new pixel values using int primitives.
+		// Results in undesired and incorrect blue artifacting.
+
 		/*int valueTotal = 0;
 		int numberOfValues = withinBoundsValues.size();
 
@@ -85,21 +92,29 @@ public class SquareAverageFilter extends ImageFilter {
 
 		return valueTotal;*/
 
-		BigInteger valueTotal = new BigInteger("0");
+		// Another method of calculating each new pixel using BigIntegers.
+		// Gets rid of the blue artifacting and eliminates the need for redundant division that
+		// is needed to stay within the limits of a variable.
 
-		Integer tempInt = new Integer(withinBoundsValues.size());
+		/*BigInteger valueTotal = new BigInteger("0");
+
+		//Integer tempInt = new Integer(withinBoundsValues.size());
+		Integer tempInt = Integer.valueOf(withinBoundsValues.size());
 		BigInteger numberOfValues = new BigInteger(tempInt.toString());
 
 		for (int i : withinBoundsValues) {
 
-			Integer addInteger = new Integer(i);
+			//Integer addInteger = new Integer(i);
+			Integer addInteger = Integer.valueOf(i);
 			valueTotal = valueTotal.add(new BigInteger(addInteger.toString()));
 
 		}
 
 		valueTotal = valueTotal.divide(numberOfValues);
 
-		return valueTotal.intValue();
+		return valueTotal.intValue();*/
+
+		// Yet another way to calculate each pixel, but using floats.
 
 		/*Float valueTotal = new Float(0.0);
 		int numberOfValues = withinBoundsValues.size();
@@ -110,6 +125,22 @@ public class SquareAverageFilter extends ImageFilter {
 		}
 
 		return valueTotal.intValue();*/
+
+		// A method of calculating each new pixel using long primitives.
+		// Most likely the most accurate method for calculating new pixel values.
+
+		long valueTotal = 0l;
+		long numberOfValues = withinBoundsValues.size();
+
+		for (int i : withinBoundsValues) {
+
+			valueTotal += i;
+
+		}
+
+		valueTotal /= numberOfValues;
+
+		return Math.toIntExact(valueTotal);
 
 	}
 
